# cuda_exercise

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pt.md  README.ru.md  README.zh.md  format_action_plan.md  format_compliance_report.md  install-vscode-extensions.bat  install-vscode-extensions.sh
00.cmake_lib/: inspect_profile.cmake
00.cuda_custom_lib/: cuda_utils.h
00.demo/: demo
00.demo_lib/: CMakeLists.txt  test_kernel.cpp
00.lib/: gpu_gtest.h
00.test_lib/: CMakeLists.txt  gpu_gtest.h
10.cuda_basic/: CMakeLists.txt  README.md
10.cuda_basic/11.Foundations/: README.md
10.cuda_basic/12.Your First CUDA Kernel/: CMakeLists.txt  README.md  todo.txt  (+1 more)
10.cuda_basic/13.Debugging_CUDA_in_VSCode/: CMakeLists.txt  README.md  vector_add_2d.cu
10.cuda_basic/14.Code Inspection and Profiling/: CMakeLists.txt  README.md  memory_coalescing.cu  memory_errors.cu  nvtx_example.cu  vector_add_2d.cu
10.cuda_basic/15.Unit Testing/: CMakeLists.txt  README.md  device_test.cu  host_test.cu  test_gpu_generator.cu  test_gpu_generator_simple.cu  test_gpu_parameterized.cu  test_gpu_simple_kernel.cu  test_vector_add_2d.cu  vector_add_2d.h
10.cuda_basic/15.Unit_Testing/: CMakeLists.txt  README.md  test_vector_add_2d.cu  test_vector_add_2d_with_lib.cu  vector_add_2d.cu  vector_add_2d.h
10.cuda_basic/15.Unit_Testing/src/: CMakeLists.txt  vector_add_2d.cu
10.cuda_basic/15.Unit_Testing/test/: CMakeLists.txt  test_vector_add_2d.cu
10.cuda_basic/15.Unit_Testing/test/part_specific/: test_vector_add_2d_with_lib.cu
10.cuda_basic/15.Unit_Testing/test/unit/kernels/: test_vector_add_2d.cu
10.cuda_basic/15.Unit_Testing/test/unit/part_specific/: test_vector_add_2d_with_lib.cu
10.cuda_basic/16.Error_Handling_and_Debugging/: CMakeLists.txt  README.md  vector_add_2d.cu  vector_add_2d.h
10.cuda_basic/16.Error_Handling_and_Debugging/src/: CMakeLists.txt
10.cuda_basic/16.Error_Handling_and_Debugging/src/kernels/: vector_add_2d.cu
10.cuda_basic/16.Error_Handling_and_Debugging/test/: CMakeLists.txt  test_vector_add_2d.cu
10.cuda_basic/16.Error_Handling_and_Debugging/test/part_specific/: test_error_handling.cu
10.cuda_basic/16.Error_Handling_and_Debugging/test/unit/kernels/: test_vector_add_2d.cu
10.cuda_basic/16.Error_Handling_and_Debugging/test/unit/part_specific/: test_error_handling.cu
10.cuda_basic/17.Memory_Hierarchy/: CMakeLists.txt  README.md  matrix_multiply.cu  test_matrix_multiply.cu
10.cuda_basic/17.Memory_Hierarchy/src/: CMakeLists.txt
10.cuda_basic/17.Memory_Hierarchy/src/kernels/: vector_add_2d.cu
10.cuda_basic/17.Memory_Hierarchy/test/: CMakeLists.txt
10.cuda_basic/17.Memory_Hierarchy/test/kernels/: test_vector_add_2d.cu
10.cuda_basic/17.Memory_Hierarchy/test/part_specific/: benchmark_memory.cu
10.cuda_basic/17.Memory_Hierarchy/test/unit/part_specific/: benchmark_memory.cu
10.cuda_basic/18.Thread_Hierarchy_Practice/: CMakeLists.txt  README.md  matrix_multiply_tiled.cu  test_matrix_multiply_tiled.cu
10.cuda_basic/18.Thread_Hierarchy_Practice/src/: CMakeLists.txt
10.cuda_basic/18.Thread_Hierarchy_Practice/src/kernels/: matrix_multiply.cu
10.cuda_basic/18.Thread_Hierarchy_Practice/src/part_specific/: thread_hierarchy_demo.cu
10.cuda_basic/18.Thread_Hierarchy_Practice/test/unit/kernels/: test_matrix_multiply.cu  test_vector_add_2d.cu
10.cuda_basic/18.Thread_Hierarchy_Practice/test/unit/part_specific/: test_thread_hierarchy_demo.cu  test_thread_operations.cu
10.cuda_basic/19.CUDA_Memory_API/: CMakeLists.txt  README.md  test_memory_api.cu
10.cuda_basic/19.CUDA_Memory_API/src/: CMakeLists.txt
10.cuda_basic/19.CUDA_Memory_API/src/kernels/: matrix_multiply.cu
10.cuda_basic/19.CUDA_Memory_API/src/part_specific/: memory_api_demo.cu
10.cuda_basic/19.CUDA_Memory_API/test/unit/kernels/: test_matrix_multiply.cu
20.cuda_intermediate/: CMakeLists.txt  README.md  README_updated.md
20.cuda_intermediate/21.Synchronization_and_Atomics/: CMakeLists.txt  README.md  synchronization_atomics.cu
20.cuda_intermediate/21.Synchronization_and_Atomics/src/: CMakeLists.txt
20.cuda_intermediate/21.Synchronization_and_Atomics/src/kernels/: atomic_operations.cu
20.cuda_intermediate/21.Synchronization_and_Atomics/test/: CMakeLists.txt
20.cuda_intermediate/22.Shared_Memory/: CMakeLists.txt  README.md  basic_shared_memory.cu  matrix_transpose.cu  reduction.cu  stencil_1d.cu
20.cuda_intermediate/22.Streams_and_Async/: CMakeLists.txt  README.md  multi_stream_pipeline.cu
20.cuda_intermediate/22.Streams_and_Async/device_async/: README.md
20.cuda_intermediate/22.Streams_and_Async/src/: CMakeLists.txt
20.cuda_intermediate/22.Streams_and_Async/src/examples/: basic_streams.cu  overlap_transfer_compute.cu  stream_callback.cu
20.cuda_intermediate/22.Streams_and_Async/test/: CMakeLists.txt
20.cuda_intermediate/23.Shared_Memory/: CMakeLists.txt  README.md
20.cuda_intermediate/23.Streams_and_Async/: README.md  basic_streams.cu  overlap_transfer_compute.cu  stream_callback.cu
20.cuda_intermediate/24.Memory_Coalescing_and_Bank_Conflicts/: CMakeLists.txt  README.md
20.cuda_intermediate/25.Dynamic_Parallelism/: CMakeLists.txt  README.md
20.cuda_intermediate/26.Cooperative_Groups_Advanced/: README.md
20.cuda_intermediate/27.Multi_GPU_Programming/: README.md
20.intermediate_cuda/: CMakeLists.txt
30.CUDA_Libraries/: README.md
40.cuda_advanced/: README.md
50.GPU-NVMe_Interaction/: CMakeLists.txt  README.md
50.GPU-NVMe_Interaction/51.NVMe_User_Space_IO/: CMakeLists.txt  README.md
50.GPU-NVMe_Interaction/51.NVMe_User_Space_IO/temp_writing_plan/: matmul_optimized.cu  test_matmul_optimized.cu  test_nvme_gpu_pipeline.cu
50.GPU-NVMe_Interaction/temp_writing_plan/: gds_nvme_io.cu  nvme_api.cu  plan.md  test_gds_nvme_io.cu  test_nvme_api.cu
demo/: CMakeLists.txt  src.cu
demo_lib/: CMakeLists.txt  kernel.cu
test_param/: CMakeLists.txt  test_gpu_generator.cu  test_gpu_generator_simple.cu  test_gpu_parameterized.cu
(+22 files in other folders)
