project(cuda_intermediate)

# Part 21: Synchronization and Atomics
add_subdirectory("21.Synchronization_and_Atomics")

# Part 22: Shared Memory
add_subdirectory("22.Shared_Memory")

# Part 23: Streams and Asynchronous Execution
add_subdirectory("23.Streams_and_Async")

# Future parts to be implemented:
# Part 11: Streams and Asynchronous Execution
# Part 12: Unified Memory
# Part 13: Pinned Memory and Zero-Copy
# Part 14: GPUDirect and Storage
# Part 15: CUDA Libraries
# Part 16: Multi-GPU Programming
# Part 17: Performance Optimization
# Part 18: cuDNN (Optional)