project(cuda_intermediate)

# Part 21: Synchronization and Atomics
add_subdirectory("21.Synchronization_and_Atomics")

# Part 22: Streams and Asynchronous Execution
add_subdirectory("22.Streams_and_Async")

# Part 23: Shared Memory
# add_subdirectory("23.Shared_Memory")

# Part 24: Memory Coalescing and Bank Conflicts
#add_subdirectory("24.Memory_Coalescing_and_Bank_Conflicts")

# Part 25: Dynamic Parallelism
#add_subdirectory("25.Dynamic_Parallelism")

# Part 27: Multi-GPU Programming
# add_subdirectory("27.Multi_GPU_Programming")

# Future parts to be implemented:
# Part 26: CUDA Libraries
# Part 28: Cooperative Groups Advanced
# Part 29: cuDNN (Optional)